Fix the stupid scrollbar
Hadn't been updated to account for kantighet, and also had a margin for some reason. Looks good on my Mac now - have yet to test on Windows.

--- a/style.css
+++ b/style.css
@@ -286,8 +286,8 @@ footer p {
 }
 
 .content::-webkit-scrollbar-track {
-	margin-top: 1px;
-	border-top-right-radius: 20px;
+	border-top-right-radius: calc(var(--kantighet) - 2px);
+	border-bottom-right-radius: calc(var(--kantighet) - 2px);
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
